# Hamish_Graph_Generation

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint.yml
docs/: catalogue.json  chart_finder.md  extending.md  gallery.md  styling.md
docs/discovery/: chart_inventory.md  palette.md  snowflake_conventions.md
motor_graphs/: __init__.py  catalogue.py  cli.py
motor_graphs/data/: __init__.py  snowflake.py
motor_graphs/recipes/: __init__.py  _shared.py  dq.py  funnel_distributions.py  risk.py  volume.py
motor_graphs/style/: __init__.py  palette.py  template.py
motor_graphs/styles/: __init__.py  _shared.py  bars.py  distributions.py  dq_subplots.py  heatmaps.py  lines.py  more_bars.py  multi_lines.py  scatters.py  specialised.py
scripts/: build_catalogue.py  keystone_compare.py  refresh_baselines.py  rejection_rule_analysis.py  snowflake_smoke_test.py
tests/: test_catalogue.py  test_cli.py  test_recipes_5e.py  test_recipes_5f.py  test_recipes_5g.py  test_recipes_5h.py  test_snowflake.py  test_style.py  test_styles.py
tests/baselines/: bar_horizontal_top_n.html  bar_plus_line_share_top_n.html  box_quantile.html  cohort_grid_grade_x_period.html  cohort_lines_1x3_by_grade_group.html  cohort_lines_1x3_paired_expected.html  cohort_lines_vs_mob.html  dq_2x2_actual_vs_expected.html  dq_2x2_with_n_annotated.html  funnel_horizontal.html  grouped_bars_by_grade_two_series.html  heatmap_swap.html  histogram_by_grade.html  line_with_ci_band.html  lines_1x2_funnel_by_introducer.html  lines_funnel_by_introducer_1x1.html  (+9 more)
(+30 files in other folders)
